Changed nav bar back to fixed position. all content scrolls  behind it

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -2,6 +2,17 @@
   padding-top: 50px;
 }
 
+.form-section {
+  background-image: url(/images/light-wood.png);
+  background-size: cover;
+  width: 100%;
+  display: block;
+  height: 200px;
+  left: 0;
+  top: 0;
+  position: relative;
+}
+
 .panel {
   margin-bottom: 0px;
 }
